Deploy: socket client
Signed-off-by: Aries Cs <aries0d0f@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "server": "ts-node server/app.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.5",
+    "@types/express": "^4.17.0",
+    "@types/socket.io": "^2.1.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "socketio": "^1.0.0",
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -52,11 +61,14 @@
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "socket.io-client": "^2.2.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
+    "vue-socket.io": "^3.0.7",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.1.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
