--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "dependencies": {
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
+    "@types/lodash": "^4.14.134",
     "@types/socket.io": "^2.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.11",
     "socketio": "^1.0.0",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
+    "uuid": "^3.3.2",
     "vue": "^2.5.2"
   },
   "devDependencies": {
+    "@types/uuid": "^3.4.4",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
