--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
     "uuid": "^3.3.2",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "python": "^2.7.18"
   },
   "devDependencies": {
     "@types/uuid": "^3.4.4",
@@ -54,6 +55,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "node-gyp": "^8.1.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
