--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "server": "ts-node server/app.ts",
+    "server": "ts-node server/app.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.5",
