--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Aries Cs <aries0d0f@gmail.com>",
   "private": true,
   "scripts": {
+    "install-deps":"npm install python@2.7.18 --registry=https://npm.taobao.org/mirrors/python/
+",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
