--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-gyp": "^8.1.0",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
